# BlackHatRUST

./: README.md
chap2/snippets/thread_error/src/: main.rs
chap2/tricoder/: Cargo.toml
chap2/tricoder/src/: error.rs  main  main.rs  ports.rs  subdomains.rs
chap3/snippets/combinators/src/: main.rs
chap3/snippets/concurrent_streams/: Cargo.toml  NOTES.txt
chap3/snippets/concurrent_streams/src/: main.rs
chap3/snippets/rust_channels/: Cargo.toml
chap3/snippets/rust_channels/src/: main.rs
chap3/tricoder-async/: Cargo.toml
chap3/tricoder-async/src/: common_ports.rs  main.rs  model.rs  ports.rs  subdomains.rs
chap4/snippets/: NOTES.txt
chap4/snippets/clapCrateTests/: Cargo.toml
chap4/snippets/clapCrateTests/src/: main.rs
chap4/snippets/tests/: Cargo.toml
chap4/snippets/tests/src/: main.rs
